--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nithilagam Homestays</title>
-    <link rel="icon" href="https://github.com/varunleaf/Nithilagam.github.io/blob/main/public/download.jpeg" type="image/jpeg"> 
+    <link rel="icon" href="https://github.com/varunleaf/Nithilagam.github.io/blob/main/public/download.jpeg" type="image/jpeg">
     <!-- Optimized Google Fonts Link -->
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Playfair+Display:wght@400;700&family=Lora:wght@400;700&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Playfair+Display:wght@400;700&family=Lora:wght@400;700&display=swap" rel="stylesheet">
     <style>
         body {
-            font-family: 'Lora', serif; 
+            font-family: 'Lora', serif;
             margin: 0;
             padding: 0;
             color: #333;
@@ -24,11 +25,11 @@
 
         header {
             text-align: center;
-            padding: 0; 
+            padding: 0;
         }
 
         h1 {
-            font-family: 'Playfair Display', serif; 
+            font-family: 'Playfair Display', serif;
             font-size: 3rem;
             font-weight: 700;
             margin-bottom: 10px;
@@ -62,27 +63,25 @@
             width: 100%;
             height: auto;
             border-radius: 10px;
-            /* Lazy Loading for faster load times */
             loading: lazy;
         }
 
         .rooms .room {
             margin-top: 30px;
-            display: flex; 
+            display: flex;
             align-items: flex-start;
-            flex-wrap: wrap; /* Flex-wrap for better responsive behavior */
+            flex-wrap: wrap;
         }
 
         .rooms .room img {
-            width: 40%; 
+            width: 40%;
             margin-right: 20px;
             border-radius: 10px;
-            /* Lazy Loading */
             loading: lazy;
         }
 
         .rooms .room .room-details {
-            width: 60%; 
+            width: 60%;
         }
 
         .contact {
@@ -91,29 +90,29 @@
 
         .button {
             display: inline-block;
-            background-color: #333; 
+            background-color: #333;
             color: white;
             padding: 10px 20px;
             text-decoration: none;
             border-radius: 5px;
             margin-top: 20px;
             font-weight: 600;
-            transition: background-color 0.3s; 
+            transition: background-color 0.3s;
         }
 
         .button:hover {
-            background-color: #555; 
+            background-color: #555;
         }
 
         .text-center {
             text-align: center;
         }
 
-        .hero { 
+        .hero {
             background-size: cover;
             background-position: center;
             color: white;
-            padding: 100px 0; 
+            padding: 100px 0;
             text-align: center;
         }
 
@@ -121,7 +120,7 @@
             position: relative;
             width: 100%;
             height: 0;
-            padding-bottom: 56.25%; 
+            padding-bottom: 56.25%;
             overflow: hidden;
             margin-top: 20px;
         }
@@ -162,14 +161,15 @@
             font-family: 'Lora', serif;
         }
 
-        th, td {
+        th,
+        td {
             padding: 15px;
             text-align: left;
-            border-bottom: 1px solid #eee; /* Light gray border */
+            border-bottom: 1px solid #eee;
         }
 
         th {
-            background-color: #f5f5f5; /* Light background for headers */
+            background-color: #f5f5f5;
             font-weight: bold;
         }
 
@@ -183,27 +183,31 @@
         /* Responsive Design Enhancements */
         @media (max-width: 768px) {
             .grid {
-                grid-template-columns: 1fr; /* Single column on mobile */
+                grid-template-columns: 1fr;
             }
+
             .rooms .room {
                 flex-direction: column;
                 align-items: center;
             }
+
             .rooms .room img {
                 width: 100%;
                 margin-right: 0;
                 margin-bottom: 20px;
             }
+
             .rooms .room .room-details {
                 width: 100%;
             }
         }
     </style>
 </head>
+
 <body>
     <div class="container">
         <header>
-            <div class="hero" style="background-image: url('https://raw.githubusercontent.com/varunleaf/Nithilagam.github.io/main/public/images/image_1.jpg');"> 
+            <div class="hero" style="background-image: url('https://raw.githubusercontent.com/varunleaf/Nithilagam.github.io/main/public/images/image_1.jpg');">
                 <h1>Nithilagam Homestays</h1>
                 <p>Indulge in the serenity and refined comfort of Nithilagam Homestays, a haven of tranquility nestled amidst the breathtaking landscapes of India. Our exclusive retreat offers discerning travelers an unforgettable escape, where personalized service and exquisite accommodations create an experience of unparalleled luxury.</p>
                 <a class="button" href="https://www.booking.com/hotel/in/nithilagam-homestays.en-gb.html">Explore Our Sanctuary</a>
@@ -227,104 +231,88 @@
 
         <section class="rooms">
             <h2>Exquisite Accommodations</h2>
+
+            <!-- Deluxe Family Suite -->
             <div class="room">
-                <img src="https://raw.githubusercontent.com/varunleaf/Nithilagam.github.io/main/public/images/image_4.jpg" alt="Deluxe Double Room with Balcony" loading="lazy">
+                <img src="https://raw.githubusercontent.com/varunleaf/Nithilagam.github.io/main/public/images/image_4.jpg" alt="Deluxe Family Suite" loading="lazy">
                 <div class="room-details">
-                    <h3>Deluxe Double Room with Balcony</h3>
-                    <p>Retreat to the comfort of our Deluxe Double Room, featuring a private balcony overlooking lush gardens. Impeccably designed with plush furnishings and modern amenities, this sanctuary offers a serene escape.</p>
+                    <h3>Deluxe Family Suite</h3>
+                    <p>This spacious suite is perfect for families, offering comfortable accommodation for 2 to 6 people. With a living room, dedicated workspace, and a fully equipped kitchen, it's ideal for a longer stay.</p>
                     <ul>
-                        <li>Spacious 20 m² room</li>
-                        <li>Plush king-size bed</li>
-                        <li>Private balcony with garden views</li>
-                        <li>Luxurious en-suite bathroom</li>
-                        <li>Complimentary Wi-Fi</li>
+                        <li>Capacity: 2-6 members</li>
+                        <li>Living room with double cot, sofa, workspace, and balcony</li>
+                        <li>Kitchen with induction stove, saucepan, kettle, toaster, dining table</li>
+                        <li>Air-conditioned bedroom with a king bed</li>
+                        <li>Bathroom with Western toilet and geyser, plus an additional Indian toilet</li>
                     </ul>
                     <a href="https://www.booking.com/hotel/in/nithilagam-homestays.en-gb.html" class="button">View Details</a>
                 </div>
             </div>
+
+            <!-- Single Room with Double Cot -->
             <div class="room">
-                <img src="https://raw.githubusercontent.com/varunleaf/Nithilagam.github.io/main/public/images/image_5.jpg" alt="Superior Double Room with Garden View" loading="lazy">
+                <img src="https://raw.githubusercontent.com/varunleaf/Nithilagam.github.io/main/public/images/image_5.jpg" alt="Single Room with Double Cot" loading="lazy">
                 <div class="room-details">
-                    <h3>Superior Double Room with Garden View</h3>
-                    <p>Experience unparalleled luxury in our Superior Double Room, featuring exquisite design and captivating garden views. Perfect for couples seeking a romantic getaway.</p>
+                    <h3>Single Room with Double Cot</h3>
+                    <p>Perfect for solo travelers or couples, this cozy room offers a peaceful environment with a mountain-view balcony.</p>
                     <ul>
-                        <li>Elegant 25 m² room</li>
-                        <li>Luxurious king-size bed</li>
-                        <li>Stunning garden views</li>
-                        <li>Spacious en-suite bathroom</li>
-                        <li>Complimentary Wi-Fi</li>
-                    </ul>
-                    <a href="https://www.booking.com/hotel/in/nithilagam-homestays.en-gb.html" class="button">View Details</a>
-                </div>
-            </div>
-            <!-- New Section for Budget Stay -->
-            <div class="room">
-                <img src="https://raw.githubusercontent.com/varunleaf/Nithilagam.github.io/main/public/images/image_7.jpg" alt="Budget Stay with Indian Toilet and Double Cot" loading="lazy">
-                <div class="room-details">
-                    <h3>Budget Stay with Indian Toilet and Double Cot</h3>
-                    <p>Experience a comfortable and affordable stay in our Budget Room. Equipped with a traditional Indian toilet and a cozy double cot, this option is perfect for travelers looking for basic, clean, and comfortable accommodations.</p>
-                    <ul>
-                        <li>Simple 15 m² room</li>
-                        <li>Comfortable double cot</li>
-                        <li>Traditional Indian toilet</li>
-                        <li>Complimentary Wi-Fi</li>
+                        <li>Capacity: 1-2 members</li>
+                        <li>Non-air-conditioned room with a double cot</li>
+                        <li>Balcony with mountain view</li>
+                        <li>Attached bathroom with Indian toilet</li>
+                        <li>Heating rod available for water heating</li>
                     </ul>
                     <a href="https://www.booking.com/hotel/in/nithilagam-homestays.en-gb.html" class="button">View Details</a>
                 </div>
             </div>
         </section>
 
-        <table>
-            <caption>House Rules</caption>
-            <tr>
-                <th>Check-in</th>
-                <td>From 14:00</td>
-            </tr>
-            <tr>
-                <th>Check-out</th>
-                <td>Until 11:00</td>
-            </tr>
-            <tr>
-                <th>Cancellation/Prepayment</th>
-                <td>Cancellation and prepayment policies vary according to accommodation type. Please enter the dates of your stay and check the conditions of your required room.</td>
-            </tr>
-            <tr>
-                <th>Children and beds</th>
-                <td>Children of any age are welcome. Cots and extra beds are available upon request.</td>
-            </tr>
-            <tr>
-                <th>Age restriction</th>
-                <td>There is no age requirement for check-in.</td>
-            </tr>
-            <tr>
-                <th>Pets</th>
-                <td>Pets are not allowed.</td>
-            </tr>
-            <tr>
-                <th>Smoking</th>
-                <td>Smoking is not allowed.</td>
-            </tr>
-            <tr>
-                <th>Parties</th>
-                <td>Parties/events are not allowed.</td>
-            </tr>
-            <tr>
-                <th>Quiet hours</th>
-                <td>Guests must be quiet between 23:00 and 07:00.</td>
-            </tr>
-        </table>
+        <section class="map">
+            <h2>Location</h2>
+            <p>Located in Tiruvannamalai, Tamil Nadu, Nithilagam Homestays offers easy access to local attractions and natural beauty.</p>
+            <div class="map-container">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3898.8070326618386!2d79.04494137499999!3d12.236270299999996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bad3795ef4e1a59%3A0x254ffbe3a7da66d5!2s63MC%2BQW%20Tiruvannamalai%2C%20Tamil%20Nadu!5e0!3m2!1sen!2sin!4v1692527200507!5m2!1sen!2sin" width="600" height="450" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+        </section>
 
-        <div class="contact text-center">
-            <h2>Book Your Stay</h2>
-            <p>Ready to experience the tranquility and luxury of Nithilagam Homestays? Click the button below to book your stay.</p>
-            <a class="button" href="https://www.booking.com/hotel/in/nithilagam-homestays.en-gb.html">Book Now</a>
-        </div>
+        <section class="house-rules">
+            <h2>House Rules</h2>
+            <table>
+                <caption>Important Guidelines</caption>
+                <thead>
+                    <tr>
+                        <th>Rule</th>
+                        <th>Description</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>No Parking</td>
+                        <td>Only street parking is available.</td>
+                    </tr>
+                    <tr>
+                        <td>Mosquito Proof</td>
+                        <td>Rooms are equipped with mosquito protection.</td>
+                    </tr>
+                    <tr>
+                        <td>R.O. Water</td>
+                        <td>Each guest is provided with 5L of R.O. water daily.</td>
+                    </tr>
+                </tbody>
+            </table>
+        </section>
 
-        <div class="map-container">
-            <h2 class="text-center">Our Location</h2>
-            <iframe src="https://www.google.com/maps?q=63MC+QW+Tiruvannamalai,+Tamil+Nadu&output=embed" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-        </div>
-
+        <section class="contact text-center">
+            <h2>Contact Us</h2>
+            <p>Feel free to get in touch with us for more information or inquiries!</p>
+            <form class="contact-form">
+                <input type="text" name="name" placeholder="Your Name" required>
+                <input type="email" name="email" placeholder="Your Email" required>
+                <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
+                <button type="submit">Send Message</button>
+            </form>
+        </section>
     </div>
 </body>
+
 </html>
