--- a/index.html
+++ b/index.html
@@ -6,9 +6,201 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nithilagam Homestays</title>
     <link rel="icon" href="https://github.com/varunleaf/Nithilagam.github.io/blob/main/public/download.jpeg" type="image/jpeg">
+    <!-- Optimized Google Fonts Link -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Playfair+Display:wght@400;700&family=Lora:wght@400;700&display=swap" rel="stylesheet">
     <style>
-        /* ... (Existing CSS styles) ... */
+        body {
+            font-family: 'Lora', serif;
+            margin: 0;
+            padding: 0;
+            color: #333;
+            line-height: 1.6;
+        }
+
+        .container {
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 20px;
+        }
+
+        header {
+            text-align: center;
+            padding: 0;
+        }
+
+        h1 {
+            font-family: 'Playfair Display', serif;
+            font-size: 3rem;
+            font-weight: 700;
+            margin-bottom: 10px;
+        }
+
+        p {
+            font-size: 1.2rem;
+            line-height: 1.6;
+        }
+
+        h2 {
+            font-family: 'Playfair Display', serif;
+            font-size: 2rem;
+            font-weight: 700;
+            margin-bottom: 20px;
+        }
+
+        .highlights ul {
+            list-style: disc;
+            margin-left: 20px;
+        }
+
+        .grid {
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+            gap: 20px;
+            margin-top: 20px;
+        }
+
+        .grid img {
+            width: 100%;
+            height: auto;
+            border-radius: 10px;
+            loading: lazy;
+        }
+
+        .rooms .room {
+            margin-top: 30px;
+            display: flex;
+            align-items: flex-start;
+            flex-wrap: wrap;
+        }
+
+        .rooms .room img {
+            width: 40%;
+            margin-right: 20px;
+            border-radius: 10px;
+            loading: lazy;
+        }
+
+        .rooms .room .room-details {
+            width: 60%;
+        }
+
+        .contact {
+            margin-top: 50px;
+        }
+
+        .button {
+            display: inline-block;
+            background-color: #333;
+            color: white;
+            padding: 10px 20px;
+            text-decoration: none;
+            border-radius: 5px;
+            margin-top: 20px;
+            font-weight: 600;
+            transition: background-color 0.3s;
+        }
+
+        .button:hover {
+            background-color: #555;
+        }
+
+        .text-center {
+            text-align: center;
+        }
+
+        .hero {
+            background-size: cover;
+            background-position: center;
+            color: white;
+            padding: 100px 0;
+            text-align: center;
+        }
+
+        .map-container {
+            position: relative;
+            width: 100%;
+            height: 0;
+            padding-bottom: 56.25%;
+            overflow: hidden;
+            margin-top: 20px;
+        }
+
+        .map-container iframe {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+        }
+
+        /* Contact form styling */
+        .contact-form input[type="text"],
+        .contact-form input[type="email"],
+        .contact-form textarea {
+            width: 100%;
+            padding: 10px;
+            margin-bottom: 10px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+        }
+
+        .contact-form button[type="submit"] {
+            background-color: #007bff;
+            color: white;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+
+        /* Table styling */
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            margin-top: 30px;
+            font-family: 'Lora', serif;
+        }
+
+        th,
+        td {
+            padding: 15px;
+            text-align: left;
+            border-bottom: 1px solid #eee;
+        }
+
+        th {
+            background-color: #f5f5f5;
+            font-weight: bold;
+        }
+
+        table caption {
+            font-size: 1.5rem;
+            font-weight: bold;
+            margin-bottom: 10px;
+            text-align: center;
+        }
+
+        /* Responsive Design Enhancements */
+        @media (max-width: 768px) {
+            .grid {
+                grid-template-columns: 1fr;
+            }
+
+            .rooms .room {
+                flex-direction: column;
+                align-items: center;
+            }
+
+            .rooms .room img {
+                width: 100%;
+                margin-right: 0;
+                margin-bottom: 20px;
+            }
+
+            .rooms .room .room-details {
+                width: 100%;
+            }
+        }
     </style>
 </head>
 
@@ -40,119 +232,86 @@
         <section class="rooms">
             <h2>Exquisite Accommodations</h2>
 
+            <!-- Deluxe Family Suite -->
             <div class="room">
                 <img src="https://raw.githubusercontent.com/varunleaf/Nithilagam.github.io/main/public/images/image_4.jpg" alt="Deluxe Family Suite" loading="lazy">
                 <div class="room-details">
                     <h3>Deluxe Family Suite</h3>
-                    <p>This spacious suite is perfect for families, offering comfortable accommodation for 2 to 6 people. With a living room, dedicated workspace, and a fully equipped kitchen, it's ideal for a longer stay.</p>
-                    <ul>
-                        <li>Capacity: 2-6 members</li>
-                        <li>Living room with double cot, sofa, workspace, and balcony</li>
-                        <li>Kitchen with induction stove, saucepan, kettle, toaster, dining table</li>
-                        <li>Air-conditioned bedroom with a king bed</li>
-                        <li>Bathroom with Western toilet and geyser, plus an additional Indian toilet</li>
-                    </ul>
-                    <a href="https://www.booking.com/hotel/in/nithilagam-homestays.en-gb.html" class="button">View Details</a>
+                    <p>Our deluxe family suite offers the perfect combination of comfort and luxury. With ample space, premium bedding, and tasteful decor, it's an ideal retreat for families or groups.</p>
                 </div>
             </div>
 
+            <!-- Deluxe Double Room -->
             <div class="room">
-                <img src="https://raw.githubusercontent.com/varunleaf/Nithilagam.github.io/main/public/images/image_7.jpg" alt="Single Room with Double Cot" loading="lazy">
+                <img src="https://raw.githubusercontent.com/varunleaf/Nithilagam.github.io/main/public/images/image_6.jpg" alt="Deluxe Double Room" loading="lazy">
                 <div class="room-details">
-                    <h3>Single Room with Double Cot</h3>
-                    <p>Perfect for solo travelers or couples, this cozy room offers a peaceful environment with a mountain-view balcony.</p>
-                    <ul>
-                        <li>Capacity: 1-2 members</li>
-                        <li>Non-air-conditioned room with a double cot</li>
-                        <li>Balcony with mountain view</li>
-                        <li>Attached bathroom with Indian toilet</li>
-                        <li>Heating rod available for water heating</li>
-                    </ul>
-                    <a href="https://www.booking.com/hotel/in/nithilagam-homestays.en-gb.html" class="button">View Details</a>
+                    <h3>Deluxe Double Room</h3>
+                    <p>Elegant and comfortable, our deluxe double room is designed for couples seeking a relaxing getaway. Enjoy the serene atmosphere and unwind in style.</p>
+                </div>
+            </div>
+
+            <!-- Deluxe Single Room -->
+            <div class="room">
+                <img src="https://raw.githubusercontent.com/varunleaf/Nithilagam.github.io/main/public/images/image_7.jpg" alt="Deluxe Single Room Exterior View" loading="lazy">
+                <img src="https://raw.githubusercontent.com/varunleaf/Nithilagam.github.io/main/public/images/image_8.jpg" alt="Deluxe Single Room Interior View" loading="lazy">
+                <div class="room-details">
+                    <h3>Deluxe Single Room</h3>
+                    <p>Designed for solo travelers or those seeking solitude, our deluxe single room offers a peaceful, comfortable space to relax and rejuvenate.</p>
                 </div>
             </div>
         </section>
 
-        <section class="map">
-            <h2>Location</h2>
-            <p>Located in Tiruvannamalai, Tamil Nadu, Nithilagam Homestays offers easy access to local attractions and natural beauty.</p>
-            <div class="map-container">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3898.8070326618386!2d79.04494137499999!3d12.236270299999996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bad3795ef4e1a59%3A0x254ffbe3a7da66d5!2s63MC%2BQW%20Tiruvannamalai%2C%20Tamil%20Nadu!5e0!3m2!1sen!2sin!4v1692527200507!5m2!1sen!2sin" width="600" height="450" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-            </div>
+        <section class="contact">
+            <h2>Contact Us</h2>
+            <p>For inquiries, reservations, or further information, please feel free to reach out to us. We are here to assist you.</p>
+            <a class="button" href="https://www.booking.com/hotel/in/nithilagam-homestays.en-gb.html">Contact Now</a>
         </section>
 
-        <section class="house-rules">
+        <section class="rules">
             <h2>House Rules</h2>
             <table>
-                <caption>House Rules</caption>
+                <caption>General Guidelines</caption>
                 <thead>
                     <tr>
                         <th>Rule</th>
-                        <th>Description</th>
+                        <th>Details</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr>
-                        <td>No Parking</td>
-                        <td>Only street parking is available.</td>
-                    </tr>
-                    <tr>
-                        <td>Mosquito Proof</td>
-                        <td>Rooms are equipped with mosquito protection.</td>
-                    </tr>
-                    <tr>
-                        <td>R.O. Water</td>
-                        <td>Each guest is provided with 5L of R.O. water daily.</td>
-                    </tr>
-                    <tr>
                         <td>Check-in</td>
-                        <td>From 14:00</td>
+                        <td>From 12:00 PM</td>
                     </tr>
                     <tr>
                         <td>Check-out</td>
-                        <td>Until 11:00</td>
-                    </tr>
-                    <tr>
-                        <td>Cancellation/Prepayment</td>
-                        <td>Cancellation and prepayment policies vary according to accommodation type. Please enter the dates of your stay and check the conditions of your required room.</td>
-                    </tr>
-                    <tr>
-                        <td>Children and beds</td>
-                        <td>Children of any age are welcome. Cots and extra beds are available upon request.</td>
-                    </tr>
-                    <tr>
-                        <td>Age restriction</td>
-                        <td>There is no age requirement for check-in.</td>
-                    </tr>
-                    <tr>
-                        <td>Pets</td>
-                        <td>Pets are not allowed.</td>
+                        <td>Until 11:00 AM</td>
                     </tr>
                     <tr>
                         <td>Smoking</td>
-                        <td>Smoking is not allowed.</td>
+                        <td>Not allowed</td>
+                    </tr>
+                    <tr>
+                        <td>Pets</td>
+                        <td>Not allowed</td>
                     </tr>
                     <tr>
                         <td>Parties</td>
-                        <td>Parties/events are not allowed.</td>
+                        <td>Parties/events are not allowed</td>
                     </tr>
                     <tr>
-                        <td>Quiet hours</td>
-                        <td>Guests must be quiet between 23:00 and 07:00.</td>
+                        <td>Quiet Hours</td>
+                        <td>Guests must be quiet between 10:00 PM and 6:00 AM</td>
+                    </tr>
+                    <tr>
+                        <td>Child Policy</td>
+                        <td>Children of all ages are welcome</td>
+                    </tr>
+                    <tr>
+                        <td>Extra Beds</td>
+                        <td>Available upon request (charges may apply)</td>
                     </tr>
                 </tbody>
             </table>
-        </section>
-
-        <section class="contact text-center">
-            <h2>Contact Us</h2>
-            <p>Feel free to get in touch with us for more information or inquiries!</p>
-            <form class="contact-form">
-                <input type="text" name="name" placeholder="Your Name" required>
-                <input type="email" name="email" placeholder="Your Email" required>
-                <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
-                <button type="submit">Send Message</button>
-            </form>
         </section>
     </div>
 </body>
