--- a/index.html
+++ b/index.html
@@ -237,81 +237,80 @@
                 <img src="https://raw.githubusercontent.com/varunleaf/Nithilagam.github.io/main/public/images/image_4.jpg" alt="Deluxe Family Suite" loading="lazy">
                 <div class="room-details">
                     <h3>Deluxe Family Suite</h3>
-                    <p>Our deluxe family suite offers the perfect combination of comfort and luxury. With ample space, premium bedding, and tasteful decor, it's an ideal retreat for families or groups.</p>
+                    <p>This spacious suite is perfect for families, offering comfortable accommodation for 2 to 6 people. With a living room, dedicated workspace, and a fully equipped kitchen, it's ideal for a longer stay.</p>
+                    <ul>
+                        <li>Capacity: 2-6 members</li>
+                        <li>Living room with double cot, sofa, workspace, and balcony</li>
+                        <li>Kitchen with induction stove, saucepan, kettle, toaster, dining table</li>
+                        <li>Air-conditioned bedroom with a king bed</li>
+                        <li>Bathroom with Western toilet and geyser, plus an additional Indian toilet</li>
+                    </ul>
+                    <a href="https://www.booking.com/hotel/in/nithilagam-homestays.en-gb.html" class="button">View Details</a>
                 </div>
             </div>
 
-            <!-- Deluxe Double Room -->
+            <!-- Single Room with Double Cot -->
             <div class="room">
-                <img src="https://raw.githubusercontent.com/varunleaf/Nithilagam.github.io/main/public/images/image_6.jpg" alt="Deluxe Double Room" loading="lazy">
+                <img src="https://raw.githubusercontent.com/varunleaf/Nithilagam.github.io/main/public/images/image_5.jpg" alt="Single Room with Double Cot" loading="lazy">
                 <div class="room-details">
-                    <h3>Deluxe Double Room</h3>
-                    <p>Elegant and comfortable, our deluxe double room is designed for couples seeking a relaxing getaway. Enjoy the serene atmosphere and unwind in style.</p>
-                </div>
-            </div>
-
-            <!-- Deluxe Single Room -->
-            <div class="room">
-                <img src="https://raw.githubusercontent.com/varunleaf/Nithilagam.github.io/main/public/images/image_7.jpg" alt="Deluxe Single Room Exterior View" loading="lazy">
-                <img src="https://raw.githubusercontent.com/varunleaf/Nithilagam.github.io/main/public/images/image_8.jpg" alt="Deluxe Single Room Interior View" loading="lazy">
-                <div class="room-details">
-                    <h3>Deluxe Single Room</h3>
-                    <p>Designed for solo travelers or those seeking solitude, our deluxe single room offers a peaceful, comfortable space to relax and rejuvenate.</p>
+                    <h3>Single Room with Double Cot</h3>
+                    <p>Perfect for solo travelers or couples, this cozy room offers a peaceful environment with a mountain-view balcony.</p>
+                    <ul>
+                        <li>Capacity: 1-2 members</li>
+                        <li>Non-air-conditioned room with a double cot</li>
+                        <li>Balcony with mountain view</li>
+                        <li>Attached bathroom with Indian toilet</li>
+                        <li>Heating rod available for water heating</li>
+                    </ul>
+                    <a href="https://www.booking.com/hotel/in/nithilagam-homestays.en-gb.html" class="button">View Details</a>
                 </div>
             </div>
         </section>
 
-        <section class="contact">
-            <h2>Contact Us</h2>
-            <p>For inquiries, reservations, or further information, please feel free to reach out to us. We are here to assist you.</p>
-            <a class="button" href="https://www.booking.com/hotel/in/nithilagam-homestays.en-gb.html">Contact Now</a>
+        <section class="map">
+            <h2>Location</h2>
+            <p>Located in Tiruvannamalai, Tamil Nadu, Nithilagam Homestays offers easy access to local attractions and natural beauty.</p>
+            <div class="map-container">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3898.8070326618386!2d79.04494137499999!3d12.236270299999996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bad3795ef4e1a59%3A0x254ffbe3a7da66d5!2s63MC%2BQW%20Tiruvannamalai%2C%20Tamil%20Nadu!5e0!3m2!1sen!2sin!4v1692527200507!5m2!1sen!2sin" width="600" height="450" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
         </section>
 
-        <section class="rules">
+        <section class="house-rules">
             <h2>House Rules</h2>
             <table>
-                <caption>General Guidelines</caption>
+                <caption>Important Guidelines</caption>
                 <thead>
                     <tr>
                         <th>Rule</th>
-                        <th>Details</th>
+                        <th>Description</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr>
-                        <td>Check-in</td>
-                        <td>From 12:00 PM</td>
+                        <td>No Parking</td>
+                        <td>Only street parking is available.</td>
                     </tr>
                     <tr>
-                        <td>Check-out</td>
-                        <td>Until 11:00 AM</td>
+                        <td>Mosquito Proof</td>
+                        <td>Rooms are equipped with mosquito protection.</td>
                     </tr>
                     <tr>
-                        <td>Smoking</td>
-                        <td>Not allowed</td>
-                    </tr>
-                    <tr>
-                        <td>Pets</td>
-                        <td>Not allowed</td>
-                    </tr>
-                    <tr>
-                        <td>Parties</td>
-                        <td>Parties/events are not allowed</td>
-                    </tr>
-                    <tr>
-                        <td>Quiet Hours</td>
-                        <td>Guests must be quiet between 10:00 PM and 6:00 AM</td>
-                    </tr>
-                    <tr>
-                        <td>Child Policy</td>
-                        <td>Children of all ages are welcome</td>
-                    </tr>
-                    <tr>
-                        <td>Extra Beds</td>
-                        <td>Available upon request (charges may apply)</td>
+                        <td>R.O. Water</td>
+                        <td>Each guest is provided with 5L of R.O. water daily.</td>
                     </tr>
                 </tbody>
             </table>
+        </section>
+
+        <section class="contact text-center">
+            <h2>Contact Us</h2>
+            <p>Feel free to get in touch with us for more information or inquiries!</p>
+            <form class="contact-form">
+                <input type="text" name="name" placeholder="Your Name" required>
+                <input type="email" name="email" placeholder="Your Email" required>
+                <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
+                <button type="submit">Send Message</button>
+            </form>
         </section>
     </div>
 </body>
